# searchdb

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 7179db6a526e_create_documents.py
src/api/: dependencies.py  routes.py
src/core/: config.py  database.py  logging.py
src/models/: document.py
src/repositories/: document_repository.py
src/schemas/: document.py
src/services/: document_service.py  search_service.py
src/utils/: load_data.py
